# FastAPI-Backend-Template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py  schemas.py
app/core/: config.py
app/routers/: items.py
tests/: conftest.py  test_items.py
